--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.androidsandbox">
 
     <application
+        android:name=".util.JournalUser"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidSandbox"
         tools:targetApi="31">
+        <activity
+            android:name=".JournalListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddJournal"
+            android:exported="false" />
         <activity
             android:name=".SignInActivity"
             android:exported="false" />
